[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
categories = ["wasm", "web-programming"]
description = "A Yew component library based on the Bulma CSS framework."
edition = "2018"
keywords = ["wasm", "web", "bulma", "sass", "yew"]
license = "MIT/Apache-2.0"
name = "ybc"
readme = "README.md"
repository = "https://github.com/thedodd/ybc"
version = "0.2.1"

[dependencies]
log = "*"
serde = { version = "1.0", optional = true }
strum = { version = "0.24", features = ["derive"] }
web-sys = { version = "0.3", features = [
    "Element",
    "File",
    "HtmlCollection",
    "HtmlSelectElement",
    "HtmlInputElement",
] }
yew = "0.20"
yew-agent = "0.1"
yew-router = { version = "0.17", optional = true }

[features]
default = []
docinclude = [] # Used only for activating `doc(include="...")` on nightly.
router = ["yew-router", "dep:serde"]

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
